--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen">
     <header class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white p-4 shadow-md">
@@ -195,6 +195,6 @@
         </div>
     </footer>
 
-    
+    <script src="script.js"></script>
 </body>
 </html>
